# remote-access-tool

./: .dockerignore  .gitignore  Cargo.toml  README.md  compose.yml
.devcontainer/: Dockerfile  compose.yml  devcontainer.json
.github/: dependabot.yml
.github/workflows/: build.yml  lint.yml  test.yml
client/: Cargo.toml  Dockerfile  centos.Dockerfile  ubuntu.Dockerfile
client/src/: broadcast.rs  cli.rs  ipc.rs  kex.rs  lib.rs  main.rs  responses.rs
client/src/requests/: command.rs  mod.rs
client/src/requests/handlers/: cd.rs  clear.rs  download.rs  exit.rs  kill.rs  ls.rs  mkdir.rs  mod.rs  ps.rs  pwd.rs  rm.rs  target.rs
client/src/requests/handlers/client/: disconnect.rs  ls.rs
common/: Cargo.toml
common/src/: cli.rs  config.rs  errors.rs  lib.rs  packets.rs  ssh.rs  utils.rs
common/src/cipher/: mod.rs
common/src/cipher/encryption/: chacha20_poly1305.rs  mod.rs  none.rs
common/src/cipher/hostkey/: mod.rs  rsa_sha2_512.rs
common/src/cipher/kex/: curve25519_sha256.rs  mod.rs
common/src/payloads/: disconnect.rs  ignore.rs  kex_ecdh_init.rs  kex_ecdh_reply.rs  kexinit.rs  mod.rs  newkeys.rs  service_accept.rs  service_request.rs  userauth_failure.rs  userauth_request.rs
common/src/payloads/custom/: answer.rs  cancel.rs  command.rs  cwd.rs  ls.rs  mod.rs  ping.rs  pong.rs  query.rs  request.rs  response.rs  result.rs
documents/: presentation-vn.pptx
integration_tests/: Cargo.toml
integration_tests/src/: lib.rs
scripts/: openssh-server.sh  openssh-source.sh  sshd_config
server/: Cargo.toml  Dockerfile
server/src/: cli.rs  config.rs  errors.rs  ipc.rs  lib.rs  main.rs  packets.rs  sshkey.rs  utils.rs
server/src/cipher/: chacha20poly1305.rs  mod.rs  none.rs
server/src/layers/: aggregation.rs  clients.rs  commands.rs  events.rs  handlers.rs  mod.rs
server/src/layers/handlers/: cd.rs  download.rs  exit.rs  ls.rs  mod.rs  pwd.rs  target.rs
server/src/layers/handlers/client/: disconnect.rs  ls.rs  mod.rs
server/src/payloads/: format.rs  kex_ecdh_init.rs  kex_ecdh_reply.rs  kexinit.rs  mod.rs  newkeys.rs  service_accept.rs  service_request.rs  userauth_failure.rs  userauth_request.rs
