[workspace]
resolver = "2"
members = ["client", "common", "server"]

[workspace.dependencies]
async-trait = "^0.1.88"
clap = { version = "^4.5.38", features = ["cargo", "derive", "string"] }
colog = "^1.3.0"
log = "^0.4.27"
ssh-key = { version = "^0.6.7", features = ["ed25519", "rsa"] }
tokio = { version = "^1.45.0", features = ["full"] }
