[package]
name = "rat-client"
version = "0.1.0"
authors = ["Serious-senpai"]
edition = "2021"
description = "Remote Access Tool (RAT) client component"
repository = "https://github.com/Serious-senpai/remote-access-tool"
license = "GPL-2.0-or-later"

[dependencies]
async-trait = { workspace = true }
chrono = "^0.4.41"
clap = { workspace = true }
colog = { workspace = true }
common = { path = "../common" }
log = { workspace = true }
rustyline = "^16.0.0"
shlex = "^1.3.0"
ssh-key = { workspace = true }
sysinfo = "^0.35.2"
tokio = { workspace = true }

[package.metadata.generate-rpm]
assets = [
    { source = "target/release/rat-client", dest = "/usr/bin/rat-client", mode = "755" }
]

[lints]
workspace = true
