[package]
name = "common"
version = "0.1.0"
edition = "2021"

[dependencies]
async-trait = "0.1.88"
chacha20 = "0.9.1"
colog = "1.3.0"
curve25519-dalek = "4.1.3"
log = "0.4.27"
num = "0.4.3"
poly1305 = "0.8.0"
rand = { version = "0.9.1", features = ["std_rng"] }
rsa = { version = "0.9.8", features = ["sha2"] }
tokio = { workspace = true, features = ["full"] }
