[package]
name = "common"
version = "0.1.0"
edition = "2021"

[dependencies]
async-trait = "^0.1.88"
chacha20 = "^0.9.1"
colog = { workspace = true }
curve25519-dalek = "4.1.3"
log = { workspace = true }
poly1305 = "^0.8.0"
rand = { version = "^0.8.5", features = ["std_rng"] }
rsa = "^0.9.8"
ssh-key = { workspace = true }
tokio = { workspace = true }
