[package]
name = "common"
version = "0.1.0"
authors = ["Serious-senpai"]
edition = "2021"
repository = "https://github.com/Serious-senpai/remote-access-tool"
license = "GPL-2.0-or-later"

[dependencies]
async-trait = { workspace = true }
chacha20 = "^0.9.1"
clap = { workspace = true }
colog = { workspace = true }
curve25519-dalek = "4.1.3"
log = { workspace = true }
poly1305 = "^0.8.0"
rand = { version = "^0.8.5", features = ["std_rng"] }
rsa = "^0.9.8"
ssh-key = { workspace = true }
tokio = { workspace = true }
