[package]
name = "server"
version = "0.1.0"
edition = "2021"

[dependencies]
base64 = "0.22.1"
curve25519-dalek = "4.1.3"
digest = "0.10.7"
num = "0.4.3"
rand = { version = "0.9.1", features = ["std_rng"] }
rsa = { version = "0.9.8", features = ["sha2"] }
tokio = { workspace = true, features = ["full"] }
