[package]
name = "rat-server"
version = "0.1.0"
authors = ["Serious-senpai"]
edition = "2021"
description = "Remote Access Tool (RAT) server component"
repository = "https://github.com/Serious-senpai/remote-access-tool"
license = "GPL-2.0-or-later"

[dependencies]
chrono = "^0.4.41"
clap = { workspace = true }
colog = { workspace = true }
common = { path = "../common" }
env_logger = "^0.11.3"
log = { workspace = true }
rustyline = "^16.0.0"
shlex = "^1.3.0"
ssh-key = { workspace = true }
tokio = { workspace = true }
